kustomize/bases/monitoring/agent-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: monitoring-grafana-agent
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: grafana-agent
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana-agent
