kustomize/bases/monitoring/agent-flow-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    route.openshift.io/termination: edge
  name: monitoring-grafana-agent
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana-agent
spec:
  ingressClassName: openshift-default
  rules:
    - host: dts-namespace-agent.apps.silver.devops.gov.bc.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana-agent
                port:
                  number: 8080
